--- a/index.html
+++ b/index.html
@@ -11,15 +11,33 @@
     <div class="container">
         <h1>Cadastro de Consultas</h1>
         
-        <div id="form-container">
-            <input type="text" id="nome" placeholder="Nome do Paciente" required>
-            <input type="text" id="telefone" placeholder="Telefone" required>
-            <input type="number" id="idade" placeholder="Idade" required>
-            <input type="text" id="especialidade" placeholder="Especialidade" required>
-            <input type="date" id="data" required>
-            <input type="time" id="hora" required>
-            <button id="salvar-consulta">Salvar Consulta</button>
-        </div>
+        <form id="form-container">
+            <div class="form-group">
+                <label for="nome">Nome do Paciente</label>
+                <input type="text" id="nome" required>
+            </div>
+            <div class="form-group">
+                <label for="telefone">Telefone</label>
+                <input type="text" id="telefone" required>
+            </div>
+            <div class="form-group">
+                <label for="idade">Idade</label>
+                <input type="number" id="idade" required>
+            </div>
+            <div class="form-group">
+                <label for="especialidade">Especialidade</label>
+                <input type="text" id="especialidade" required>
+            </div>
+            <div class="form-group">
+                <label for="data">Data</label>
+                <input type="date" id="data" required>
+            </div>
+            <div class="form-group">
+                <label for="hora">Hora</label>
+                <input type="time" id="hora" required>
+            </div>
+            <button type="button" id="salvar-consulta">Salvar Consulta</button>
+        </form>
 
         <div id="resultados">
             <h2>Consultas do Mês</h2>
