Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Gestão de Consultas</h1>
+        <h1>Gestão de Consultas - FonoClinic</h1>
     </header>
     <main>
         <section class="form-section">
