--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Gestão de Consultas - FonoClinic</h1>
+        <h1>Gestão de Consultas</h1>
     </header>
     <main>
         <section class="form-section">
-            <h2>Cadastro de Consulta</h2>
+            <h2>Cadastro de Consulta - FonoClinic</h2>
             <form id="cadastro-form">
                 <div class="input-group">
                     <label for="nome">Nome do Paciente:</label>
