--- a/index.html
+++ b/index.html
@@ -3,73 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mesas da Lanchonete Bacanga</title>
     <link rel="stylesheet" href="styles.css">
-    <title>Web App de Consultas</title>
+    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
-    <header>
-        <h1>Gestão de Consultas</h1>
-    </header>
-    <main>
-        <section class="form-section">
-            <h2>Cadastro de Consulta - FonoClinic</h2>
-            <form id="cadastro-form">
-                <div class="input-group">
-                    <label for="nome">Nome do Paciente:</label>
-                    <input type="text" id="nome" placeholder="Digite o nome">
-                </div>
-                <div class="input-group">
-                    <label for="telefone">Telefone:</label>
-                    <input type="text" id="telefone" placeholder="Digite o telefone">
-                </div>
-                <div class="input-group">
-                    <label for="idade">Idade:</label>
-                    <input type="number" id="idade" placeholder="Digite a idade">
-                </div>
-                <div class="input-group">
-                    <label for="consultorio">Consultório:</label>
-                    <input type="text" id="consultorio" placeholder="Digite o número do consultório">
-                </div>
-                <div class="input-group">
-                    <label for="especialidade">Especialidade:</label>
-                    <input type="text" id="especialidade" placeholder="Digite a especialidade">
-                </div>
-                <div class="input-group">
-                    <label for="data-consulta">Data da Consulta:</label>
-                    <input type="date" id="data-consulta">
-                </div>
-                <div class="input-group">
-                    <label for="hora-consulta">Hora da Consulta:</label>
-                    <input type="time" id="hora-consulta">
-                </div>
-                <button type="button" id="salvar-consulta">Salvar Consulta</button>
-            </form>
-        </section>
+    <h1>Mesas da Lanchonete Bacanga</h1>
+    <div id="mesas">
+        <div class="mesa" data-mesa="1">
+            <h2>Mesa 1</h2>
+            <input type="text" id="nome1" placeholder="Nome do Item">
+            <input type="number" id="valor1" placeholder="Valor">
+            <input type="number" id="quantidade1" placeholder="Quantidade">
+            <button onclick="adicionarPedido(1)">Adicionar</button>
+            <button onclick="limparMesa(1)">Limpar</button>
+            <div id="qrcode1"></div>
+        </div>
 
-        <section class="filter-section">
-            <h2>Resumo de Filtro</h2>
-            <div class="input-group">
-                <label for="filtro-especialidade">Especialidade:</label>
-                <input type="text" id="filtro-especialidade" placeholder="Digite a especialidade">
-            </div>
-            <div class="input-group">
-                <label for="filtro-data">Data:</label>
-                <input type="date" id="filtro-data">
-            </div>
-            <div class="input-group">
-                <label for="filtro-horario">Horário:</label>
-                <input type="time" id="filtro-horario">
-            </div>
-            <button type="button" id="filtro-confirmar">Confirmar Filtro</button>
-            <div id="resultado-filtro-detalhes"></div>
-        </section>
+        <div class="mesa" data-mesa="2">
+            <h2>Mesa 2</h2>
+            <input type="text" id="nome2" placeholder="Nome do Item">
+            <input type="number" id="valor2" placeholder="Valor">
+            <input type="number" id="quantidade2" placeholder="Quantidade">
+            <button onclick="adicionarPedido(2)">Adicionar</button>
+            <button onclick="limparMesa(2)">Limpar</button>
+            <div id="qrcode2"></div>
+        </div>
 
-        <section class="consulta-mes-section">
-            <h2>Consultas por Mês</h2>
-            <div id="meses-consultas" class="meses-grid"></div>
-            <div id="dias-consultas" class="dias-grid"></div>
-        </section>
-    </main>
+        <div class="mesa" data-mesa="3">
+            <h2>Mesa 3</h2>
+            <input type="text" id="nome3" placeholder="Nome do Item">
+            <input type="number" id="valor3" placeholder="Valor">
+            <input type="number" id="quantidade3" placeholder="Quantidade">
+            <button onclick="adicionarPedido(3)">Adicionar</button>
+            <button onclick="limparMesa(3)">Limpar</button>
+            <div id="qrcode3"></div>
+        </div>
+
+        <div class="mesa" data-mesa="4">
+            <h2>Mesa 4</h2>
+            <input type="text" id="nome4" placeholder="Nome do Item">
+            <input type="number" id="valor4" placeholder="Valor">
+            <input type="number" id="quantidade4" placeholder="Quantidade">
+            <button onclick="adicionarPedido(4)">Adicionar</button>
+            <button onclick="limparMesa(4)">Limpar</button>
+            <div id="qrcode4"></div>
+        </div>
+    </div>
     
     <script src="script.js"></script>
 </body>
